Align my About section and fixing how cards should display and solving margin issue

--- a/style.css
+++ b/style.css
@@ -114,6 +114,7 @@ body {
   height: 718px;
   background-image: url('images/header-shapes\ mobile.png');
   background-repeat: no-repeat;
+  width: 100%;
 }
 
 .nav-bar {
@@ -136,6 +137,8 @@ body {
   padding-bottom: 10%;
   line-height: 52px;
   background: #fff;
+  width: 327px;
+  height: 620px;
 }
 
 .second-section {
@@ -385,7 +388,7 @@ a {
 }
 
 .input {
-  width: 100%;
+  width: 350px;
   height: 50px;
   background: #fff;
   border: 1px solid #cfd8dc;
@@ -400,7 +403,7 @@ a {
 }
 
 .text-area {
-  width: 100%;
+  width: 350px;
   height: 170px;
   background: #fff;
   border-radius: 8px;
@@ -509,7 +512,6 @@ a {
     display: flex;
     width: 85%;
     flex-direction: row;
-    gap: 30px;
     height: 480px;
     margin-left: 10%;
     margin-right: 20%;
@@ -518,6 +520,7 @@ a {
 
   .second-section-div {
     width: 70%;
+    margin-left: 10%
   }
 
   .second-para {
@@ -549,8 +552,8 @@ a {
   }
 
   .section-img {
-    width: 544px;
-    height: 430px;
+    width: 500px;
+    height: 400px;
     border-radius: 8px;
   }
 
@@ -558,7 +561,6 @@ a {
     display: flex;
     width: 85%;
     flex-direction: row-reverse;
-    gap: 20px;
     height: 480px;
     margin-left: 10%;
     margin-right: 20%;
@@ -569,7 +571,6 @@ a {
     display: flex;
     width: 85%;
     flex-direction: row;
-    gap: 30px;
     height: 480px;
     margin-left: 10%;
     margin-right: 20%;
@@ -580,7 +581,6 @@ a {
     display: flex;
     width: 85%;
     flex-direction: row-reverse;
-    gap: 25px;
     height: 480px;
     margin-left: 10%;
     margin-right: 20%;
@@ -598,6 +598,28 @@ a {
     margin-top: 10%;
   }
 
+  .section6-list {
+    display: flex;
+    flex-direction: column;
+    width: 120px;
+    height: 120px;
+    align-items: flex-start;
+  }
+
+  .section-tech-list {
+    display: flex;
+    align-items: flex-start;
+    gap: 8px;
+  }
+
+  .sections-lign {
+    margin-left: 5%;
+  }
+
+  .section-about {
+    margin-right: 5%;
+  }
+
   .last-section {
     display: flex;
     flex-direction: column;
@@ -607,6 +629,12 @@ a {
     justify-content: center;
     background-image: url('images/contact-img.png');
     height: 740px;
+  }
+
+  .bottom-tech {
+    margin-top: 5%;
+    margin-right: 20%;
+    margin-left: 5%;
   }
 
   .last-paragraph {
